book vector cosmology 3

--- a/docs/books/book-vector-cosmology-iii-natural-generator/book-vector-cosmology-iii.tex
+++ b/docs/books/book-vector-cosmology-iii-natural-generator/book-vector-cosmology-iii.tex
@@ -91,6 +91,9 @@
 \input{chapter09-self-caused/chapter09-02-final-formula_en.tex}
 \input{chapter09-self-caused/chapter09-03-ultimate-state_en.tex}
 
+% Bonus Chapter: The Riemann Hypothesis
+\include{bonus-riemann-hypothesis/bonus-riemann-hypothesis_en}
+
 \appendix
 
 % Appendix A: The Mathematics of Modular Time
