--- a/docs/books/book-vector-cosmology-iii-natural-generator/book-vector-cosmology-iii.tex
+++ b/docs/books/book-vector-cosmology-iii-natural-generator/book-vector-cosmology-iii.tex
@@ -105,6 +105,9 @@
 % Appendix C: Lie Algebras and the Exponential Map
 \include{appendix-c-lie-algebras-exponential-map/appendix-c-lie-algebras-exponential-map_en}
 
+% Appendix D: The Evolution Equation and Cosmic Coordinates
+\include{appendix-d-evolution-equation-cosmic-coordinates/appendix-d-evolution-equation-cosmic-coordinates_en}
+
 \backmatter
 
 % Glossary
