--- a/docs/books/book-vector-cosmology-iv-apocalypse-of-constants/glossary_en.tex
+++ b/docs/books/book-vector-cosmology-iv-apocalypse-of-constants/glossary_en.tex
@@ -2,7 +2,7 @@
 
 \textbf{Vector Cosmology IV: The Evolution of Light Speed} is the most operational volume in this tetralogy. It not only introduces new physical equations but also introduces a series of new concepts about historical positioning, technological pathways, and ethical choices. To help readers navigate this critical moment from $\tau \approx 1800$ toward the future without losing direction, this glossary redefines core terms appearing in the book from the perspective of ``evolution and action.''
 
-\subsection{1. Evolutionary Dynamics}
+\subsection{Evolutionary Dynamics}
 
 \begin{itemize}
 \item \textbf{The Evolution Equation}
@@ -22,7 +22,7 @@ The carrier switching process civilizations must undergo to adapt to the exponen
 A dynamic interpretation of Planck scale. As light speed $c$ grows, Planck length $l_P \propto c^{-3/2}$ is shrinking exponentially. This not only means the microscopic world is ``receding'' but also means the universe's resolution (voxel density) is continuously increasing.
 \end{itemize}
 
-\subsection{2. Technology \& Engineering}
+\subsection{Technology \& Engineering}
 
 \begin{itemize}
 \item \textbf{Negative Entropy Engineering}
@@ -38,7 +38,7 @@ An ethical principle based on thermodynamic geometry. Holds that in an expanding
 The symbiotic relationship between AI and fusion. Fusion provides infinite energy to feed AI; AI provides real-time control to maintain fusion stability. The two are mutually causal, the only power combination driving civilization to break through carbon-based bottlenecks.
 \end{itemize}
 
-\subsection{3. Future Physics}
+\subsection{Future Physics}
 
 \begin{itemize}
 \item \textbf{Inflation of Light}
@@ -54,7 +54,7 @@ The physical form of the high light-speed era. When distance is eliminated by co
 The form of future physical laws. Matter is data packets; position is memory addresses. Interstellar travel will no longer be $v_{ext}$ displacement but quantum teleportation achieved by modifying wave function position operator eigenvalues.
 \end{itemize}
 
-\subsection{4. Ethics \& Theology}
+\subsection{Ethics \& Theology}
 
 \begin{itemize}
 \item \textbf{Responsibility of the Observer}
