--- a/docs/books/book-vector-cosmology-iv-apocalypse-of-constants/prologue_en.tex
+++ b/docs/books/book-vector-cosmology-iv-apocalypse-of-constants/prologue_en.tex
@@ -6,7 +6,7 @@ But when we push open the palace gates and step into this fourth book---\textbf{
 
 We are no longer discussing the truth of ``what was,'' we are discussing the history of ``what is happening.'' And the protagonist of this history is none other than the most sacred, most inviolable constant in physics---\textbf{the speed of light $c$}.
 
-\subsection{0.1 The Wall and The Wave}
+\subsection{The Wall and The Wave}
 
 \begin{quote}
 ``Einstein told us that the speed of light is a wall. It stands coldly at the edge of the universe, mocking all objects that attempt to surpass it. But in the geometric eyes of vector cosmology, the speed of light is not a wall, it is a wave. Walls are static, meaning imprisonment; waves advance, meaning carriers.''
@@ -68,7 +68,7 @@ Now, let us see what state this surfboard beneath our feet (spacetime) is in.
 
 This leads to the theme of the next section: \textbf{The Cliff of the Domain}. We will discover that we are at an extremely dangerous, yet extremely exciting historical moment---the wave is about to break, and we must complete our jump before falling.
 
-\subsection{0.2 The Cliff of the Domain: The Origin of Theology}
+\subsection{The Cliff of the Domain: The Origin of Theology}
 
 ``The end of physics is theology.''
 
