--- a/docs/books/book-vector-cosmology-v-minting-of-time/book-vector-cosmology-v-minting-of-time.tex
+++ b/docs/books/book-vector-cosmology-v-minting-of-time/book-vector-cosmology-v-minting-of-time.tex
@@ -146,5 +146,14 @@
 % Afterword
 \include{epilogue/afterword_en}
 
+% Appendices
+\appendix
+
+\include{appendix/appendix-a-golden-time-formula_en}
+\include{appendix/appendix-b-infinite-game-thermodynamics_en}
+\include{appendix/appendix-c-topological-protection-memory-crystals_en}
+\include{appendix/appendix-d-algorithm-action_en}
+\include{appendix/appendix-e-daily-liturgy-eternal_en}
+
 \end{document}
 
